--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
@@ -29,6 +29,26 @@
     </script>
   </head>
   <body>
+    <ul class="menu menu-horizontal w-full relative z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
+      <%= if @current_scope do %>
+        <li>
+          {@current_scope.member.email}
+        </li>
+        <li>
+          <.link href={~p"/members/settings"}>Settings</.link>
+        </li>
+        <li>
+          <.link href={~p"/members/log-out"} method="delete">Log out</.link>
+        </li>
+      <% else %>
+        <li>
+          <.link href={~p"/members/register"}>Register</.link>
+        </li>
+        <li>
+          <.link href={~p"/members/log-in"}>Log in</.link>
+        </li>
+      <% end %>
+    </ul>
     {@inner_content}
   </body>
 </html>
