[HS] 进行了一些修改

--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
@@ -38,14 +38,14 @@
           <.link href={~p"/members/settings"}>Settings</.link>
         </li>
         <li>
-          <.link href={~p"/members/log-out"} method="delete">Log out</.link>
+          <.link href={~p"/logout"} method="delete">Log out</.link>
         </li>
       <% else %>
         <li>
           <.link href={~p"/members/register"}>Register</.link>
         </li>
         <li>
-          <.link href={~p"/members/log-in"}>Log in</.link>
+          <.link href={~p"/login"}>Log in</.link>
         </li>
       <% end %>
     </ul>
