更新了翻译，修改了部分路由

--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
@@ -35,14 +35,14 @@
           {@current_scope.member.email}
         </li>
         <li>
-          <.link href={~p"/members/settings"}>Settings</.link>
+          <.link href={~p"/me/settings"}>Settings</.link>
         </li>
         <li>
           <.link href={~p"/logout"} method="delete">Log out</.link>
         </li>
       <% else %>
         <li>
-          <.link href={~p"/members/register"}>Register</.link>
+          <.link href={~p"/sign_up"}>Register</.link>
         </li>
         <li>
           <.link href={~p"/login"}>Log in</.link>
