--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/components/layouts/root.html.heex
@@ -35,17 +35,17 @@
           {@current_scope.member.email}
         </li>
         <li>
-          <.link href={~p"/me/settings"}>Settings</.link>
+          <.link href={~p"/me/settings"}><%= dgettext("account", "Settings") %></.link>
         </li>
         <li>
-          <.link href={~p"/logout"} method="delete">Log out</.link>
+          <.link href={~p"/logout"} method="delete"><%= dgettext("account", "Log out") %></.link>
         </li>
       <% else %>
         <li>
-          <.link href={~p"/sign_up"}>Register</.link>
+          <.link href={~p"/sign_up"}><%= dgettext("account", "Register") %></.link>
         </li>
         <li>
-          <.link href={~p"/login"}>Log in</.link>
+          <.link href={~p"/login"}><%= dgettext("account", "Log in") %></.link>
         </li>
       <% end %>
     </ul>
