fix: 修正了 Layout.app 重复的错误 feat(theme): 计划设计新页面主题 feat: 启动端口更具特色

--- a/apps/hana_shirabe_web/assets/css/app.css
+++ b/apps/hana_shirabe_web/assets/css/app.css
@@ -91,6 +91,8 @@
   --noise: 0;
 }
 
+/* TODO: 依据 NOCTILUCENT 实现自己的定色方案 */
+
 /* 根据 LiveView 类添加变体 */
 @custom-variant phx-click-loading (.phx-click-loading&, .phx-click-loading &);
 @custom-variant phx-submit-loading (.phx-submit-loading&, .phx-submit-loading &);
