--- a/apps/hana_shirabe_web/assets/css/app.css
+++ b/apps/hana_shirabe_web/assets/css/app.css
@@ -91,7 +91,12 @@
   --noise: 0;
 }
 
-/* TODO: 依据 NOCTILUCENT 实现自己的定色方案 */
+/*
+  TODO 颜色主题：
+
+  * 奶油玉米（纪念某qi）
+  * 夜光云（参见 https://github.com/GES233/Noctilucent ）
+*/
 
 /* 根据 LiveView 类添加变体 */
 @custom-variant phx-click-loading (.phx-click-loading&, .phx-click-loading &);
