--- a/apps/hana_shirabe_web/assets/css/app.css
+++ b/apps/hana_shirabe_web/assets/css/app.css
@@ -20,12 +20,6 @@
 /* daisyUI 主题插件。您可以通过以下方式获取最新版本来更新此文件：
     curl -sLO https://github.com/saadeghi/daisyui/releases/latest/download/daisyui-theme.js 
     您可以访问 https://daisyui.com/theme-generator/ 构建自己的主题。 */
-/*
-  TODO 颜色主题：
-
-  * 奶油玉米（纪念某qi）
-*/
-
 /* Powered by Gemini 2.5 Pro */
 @plugin "../vendor/daisyui-theme" {
   name: "noctilucent";
@@ -75,39 +69,40 @@
 }
 
 @plugin "../vendor/daisyui-theme" {
-  name: "light";
-  default: true;
+  name: "core-cream-soup";
+  default: false;
   prefersdark: false;
   color-scheme: "light";
-  --color-base-100: oklch(98% 0 0);
-  --color-base-200: oklch(96% 0.001 286.375);
-  --color-base-300: oklch(92% 0.004 286.32);
-  --color-base-content: oklch(21% 0.006 285.885);
-  --color-primary: oklch(70% 0.213 47.604);
-  --color-primary-content: oklch(98% 0.016 73.684);
-  --color-secondary: oklch(55% 0.027 264.364);
-  --color-secondary-content: oklch(98% 0.002 247.839);
-  --color-accent: oklch(0% 0 0);
-  --color-accent-content: oklch(100% 0 0);
-  --color-neutral: oklch(44% 0.017 285.786);
-  --color-neutral-content: oklch(98% 0 0);
+  --color-base-100: oklch(98% 0.026 102.212);
+  --color-base-200: oklch(97% 0.071 103.193);
+  --color-base-300: oklch(94% 0.129 101.54);
+  --color-base-content: oklch(42% 0.095 57.708);
+  --color-primary: oklch(87% 0.15 154.449);
+  --color-primary-content: oklch(26% 0.065 152.934);
+  --color-secondary: oklch(80% 0.114 19.571);
+  --color-secondary-content: oklch(25% 0.092 26.042);
+  --color-accent: oklch(87% 0 0);
+  --color-accent-content: oklch(14% 0 0);
+  --color-neutral: oklch(68% 0.162 75.834);
+  --color-neutral-content: oklch(98% 0.026 102.212);
   --color-info: oklch(62% 0.214 259.815);
   --color-info-content: oklch(97% 0.014 254.604);
-  --color-success: oklch(70% 0.14 182.503);
-  --color-success-content: oklch(98% 0.014 180.72);
-  --color-warning: oklch(66% 0.179 58.318);
+  --color-success: oklch(69% 0.17 162.48);
+  --color-success-content: oklch(97% 0.021 166.113);
+  --color-warning: oklch(76% 0.188 70.08);
   --color-warning-content: oklch(98% 0.022 95.277);
-  --color-error: oklch(58% 0.253 17.585);
+  --color-error: oklch(64% 0.246 16.439);
   --color-error-content: oklch(96% 0.015 12.422);
-  --radius-selector: 0.25rem;
-  --radius-field: 0.25rem;
-  --radius-box: 0.5rem;
-  --size-selector: 0.21875rem;
-  --size-field: 0.21875rem;
+  --radius-selector: 0.5rem;
+  --radius-field: 0.5rem;
+  --radius-box: 1rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
   --border: 1.5px;
-  --depth: 1;
-  --noise: 0;
+  --depth: 0;
+  --noise: 1;
 }
+
 
 /* 根据 LiveView 类添加变体 */
 @custom-variant phx-click-loading (.phx-click-loading&, .phx-click-loading &);
