--- a/apps/hana_shirabe_web/assets/css/app.css
+++ b/apps/hana_shirabe_web/assets/css/app.css
@@ -10,6 +10,11 @@
 @source "../js";
 @source "../../lib/hana_shirabe_web";
 
+/* Phoenix 使用的是 TailwindCSS-Standalone，
+  那几十兆中就正好包括了一些常见的插件，引入即可。
+ */
+@plugin "@tailwindcss/typography";
+
 /* 用于启用 "hero-#{ICON}" 类的一个 Tailwind 插件。
    heroicons 的安装本身由你的 mix.exs 管理。 */
 @plugin "../vendor/heroicons";
@@ -40,15 +45,19 @@
 
   /* 天空 - The Night Sky */
   --color-base-100: oklch(23.04% 0.069 271.65); /* ncl_bg */
-  --color-base-200: oklch(19.00% 0.032 291.65); /* ncl_bg_dark */
-  --color-base-300: oklch(17.79% 0.027 290.48); /* A slightly darker variant of ncl_bg_dark */
+  --color-base-200: oklch(19% 0.032 291.65); /* ncl_bg_dark */
+  --color-base-300: oklch(
+    17.79% 0.027 290.48
+  ); /* A slightly darker variant of ncl_bg_dark */
 
   /* 云辉 - The Glowing Cloud (Content) */
   --color-base-content: oklch(94.81% 0.028 102.48); /* ncl_twi_cl */
 
   /* 彩云 - The Iridescent Cloud (Primary Actions) */
   --color-primary: oklch(78.14% 0.081 305.29); /* ncl_cl_pr */
-  --color-primary-content: oklch(19.00% 0.032 291.65); /* ncl_bg_dark for contrast */
+  --color-primary-content: oklch(
+    19% 0.032 291.65
+  ); /* ncl_bg_dark for contrast */
 
   /* 云体 - The Cloud Body (Secondary Actions) */
   --color-secondary: oklch(63.44% 0.044 268.26); /* ncl_cl */
@@ -56,7 +65,7 @@
 
   /* 暮光 - The Twilight Glow (Accent) */
   --color-accent: oklch(84.16% 0.109 79.34); /* ncl_twi */
-  --color-accent-content: oklch(19.00% 0.032 291.65); /* ncl_bg_dark */
+  --color-accent-content: oklch(19% 0.032 291.65); /* ncl_bg_dark */
 
   /* 云霭 - The Haze (Neutral Elements) */
   --color-neutral: oklch(63.44% 0.044 268.26); /* ncl_cl */
@@ -94,11 +103,11 @@
   --color-base-300: oklch(94% 0.129 101.54);
   --color-base-content: oklch(42% 0.095 57.708);
   --color-primary: oklch(84.16% 0.109 79.34);
-  --color-primary-content: oklch(22.3% 0.120 51.0);
-  --color-secondary: oklch(94.5% 0.150 93.6);
+  --color-primary-content: oklch(22.3% 0.12 51);
+  --color-secondary: oklch(94.5% 0.15 93.6);
   --color-secondary-content: oklch(43.1% 0.126 102.1);
   --color-accent: oklch(55% 0.135 66.442);
-  --color-accent-content: oklch(89.0% 0.038 81.8);
+  --color-accent-content: oklch(89% 0.038 81.8);
   --color-neutral: oklch(83.8% 0.089 97.4);
   --color-neutral-content: oklch(40.9% 0.037 26.9);
   --color-info: oklch(86.7% 0.059 282.4);
@@ -107,8 +116,8 @@
   --color-success-content: oklch(37% 0.077 168.94);
   --color-warning: oklch(78.6% 0.255 91.9);
   --color-warning-content: oklch(41% 0.112 45.904);
-  --color-error: oklch(86.1% 0.210 23.1);
-  --color-error-content: oklch(38.6% 0.213 15.0);
+  --color-error: oklch(86.1% 0.21 23.1);
+  --color-error-content: oklch(38.6% 0.213 15);
   --radius-selector: 0.5rem;
   --radius-field: 0.5rem;
   --radius-box: 1rem;
@@ -118,6 +127,45 @@
   --depth: 0;
   --noise: 1;
 }
+
+/**
+ * TODO 再加上几类：
+ *
+ * * 
+ * * [Ulterior Motives](https://lostmediawiki.com/File:Pink_Boombox.webp) 主题配色
+**/
+
+/* TODO: 针对 @tailwindcss/typography 的配置
+  参见 https://stackoverflow.com/questions/79626704/how-to-configure-tailwindcss-typography-plugin-from-tailwindcss-v4
+
+  https://github.com/tailwindlabs/tailwindcss-typography/issues/372#issuecomment-2616848354
+    @utility prose {
+      --tw-prose-body: var(--color-primary);
+      --tw-prose-headings: var(--color-primary);
+      --tw-prose-bold: var(--color-primary);
+      --tw-prose-quote-borders: var(--color-slate-300);
+      --tw-prose-quotes: var(--color-muted-foreground);
+      --tw-prose-code: var(--color-primary);
+
+      code {
+        &::before,
+        &::after {
+          display: none;
+        }
+        text-wrap: nowrap;
+      }
+
+      blockquote {
+        font-weight: 400;
+      }
+    }
+  
+  或者是：
+
+    @plugin "@tailwindcss/typography" {
+      className: wysiwyg;
+    }
+*/
 
 /* 根据 LiveView 类添加变体 */
 @custom-variant phx-click-loading (.phx-click-loading&, .phx-click-loading &);
