--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
@@ -15,6 +15,8 @@
           doloribus?
         </p>
       </article>
+      <div class="card">
+      </div>
     </div>
   </main>
 </Layouts.app>
