refactor(layouts): extract navbar components and add app_without_member layout
Extracted reusable components for the navbar icon and member dropdown into separate functions. Replaced inline user menu with `member_in_navbar` component. Renamed `copyleft_declaration` to `copyright_declaration` with updated symbol. Added new `app_without_member` layout variant for pages that don't require member context, improving code reuse and maintainability.

--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/license.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/license.html.heex
@@ -1,18 +1,18 @@
-<Layouts.app flash={@flash} current_scope={@current_scope}>
+<Layouts.app_without_member flash={@flash}>
   <main class="w-full bg-base-200 py-12 px-4">
     <div class="mx-auto max-w-4xl bg-base-100 rounded-lg shadow-sm p-8 sm:p-12">
       <article class="prose sm:prose-xl">
         <hgourp>
           <h3>LICENSE</h3>
-          
+
           <p>Unlicense</p>
         </hgourp>
-        
+
         <p>Anyone is free to copy, modify, publish, use, compile, sell, or
           distribute this software, either in source code form or as a compiled
           binary, for any purpose, commercial or non-commercial, and by any
           means.</p>
-        
+
         <p>In jurisdictions that recognize copyright laws, the author or authors
           of this software dedicate any and all copyright interest in the
           software to the public domain. We make this dedication for the benefit
@@ -20,7 +20,7 @@
           successors. We intend this dedication to be an overt act of
           relinquishment in perpetuity of all present and future rights to this
           software under copyright law.</p>
-        
+
         <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
           EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
           MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
@@ -28,11 +28,11 @@
           OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
           ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
           OTHER DEALINGS IN THE SOFTWARE.</p>
-        
+
         <p>
           For more information, please refer to &lt;<a href="https://unlicense.org">https://unlicense.org</a>&gt;
         </p>
       </article>
     </div>
   </main>
-</Layouts.app>
+</Layouts.app_without_member>
