--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
@@ -1,21 +1,30 @@
 <Layouts.app flash={@flash} current_scope={@current_scope}>
   <main class="w-full bg-base-200 py-12 px-4">
     <div class="mx-auto max-w-4xl bg-base-100 rounded-lg shadow-sm p-8 sm:p-12">
-      <article class="prose sm:prose-xl">
-        <h1>2333</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit obcaecati
-          temporibus delectus et eaque non enim, consequatur illum velit sapiente
-          molestiae soluta voluptatibus omnis quasi dolores maxime officiis at vero!
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut dignissimos
-          quasi pariatur nobis ipsa ullam! Commodi modi, saepe eveniet soluta numquam
-          quasi ducimus, corrupti architecto distinctio dignissimos alias nesciunt
-          doloribus?
-        </p>
-      </article>
-      <div class="card"></div>
+      <div class="card">
+        <div class="card-body">
+          <article class="prose sm:prose-xl">
+            <p class="text-sm card-title"><code>&lt;prose&gt;</code> Demostration</p>
+            <h1>2333</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit obcaecati
+              temporibus delectus et eaque non enim, consequatur illum velit sapiente
+              molestiae soluta voluptatibus omnis quasi dolores maxime officiis at vero!
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut dignissimos
+              quasi pariatur nobis ipsa ullam! Commodi modi, saepe eveniet soluta numquam
+              quasi ducimus, corrupti architecto distinctio dignissimos alias nesciunt
+              doloribus?
+            </p>
+          </article>
+        </div>
+      </div>
+      <hr />
+      <div class="card">
+        <div class="card-body">
+        </div>
+      </div>
     </div>
   </main>
 </Layouts.app>
