chore(daisyui): bump daisyui's version to 5.4.7

--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
@@ -23,6 +23,9 @@
       <hr />
       <div class="card">
         <div class="card-body">
+          <span class="countdown">
+            <span style="--value:59;" aria-live="polite" aria-label="59">59</span>
+          </span>
         </div>
       </div>
     </div>
