--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/page.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/page.html.heex
@@ -1,7 +1,15 @@
 <Layouts.app_without_member flash={@flash}>
   <main class="w-full bg-base-200 py-12 px-4">
     <div class="mx-auto max-w-4xl bg-base-100 rounded-lg shadow-sm p-8 sm:p-12">
-      <article class="prose sm:prose-xl"></article>
+      <%= if @machine_translate do %>
+        <div class="card bg-base-200 rounded my-4">
+          <h3 class="text-2xl font-bold text-color-primary">title</h3>
+          <p class="text-center">TODO: mechine learning declaration.</p>
+        </div>
+      <% end %>
+      <article class="prose sm:prose-xl">
+        <%= @markdown |> raw() %>
+      </article>
     </div>
   </main>
 </Layouts.app_without_member>
