--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
@@ -3,29 +3,20 @@
     <div class="mx-auto max-w-4xl bg-base-100 rounded-lg shadow-sm p-8 sm:p-12">
       <div class="card">
         <div class="card-body">
+          <div class="divider">
+            <p class="text-lg card-title"><code>&lt;prose&gt;</code> with Markdown Demostration</p>
+          </div>
           <article class="prose sm:prose-xl">
-            <p class="text-sm card-title"><code>&lt;prose&gt;</code> Demostration</p>
-            <h1>2333</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit obcaecati
-              temporibus delectus et eaque non enim, consequatur illum velit sapiente
-              molestiae soluta voluptatibus omnis quasi dolores maxime officiis at vero!
-            </p>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut dignissimos
-              quasi pariatur nobis ipsa ullam! Commodi modi, saepe eveniet soluta numquam
-              quasi ducimus, corrupti architecto distinctio dignissimos alias nesciunt
-              doloribus?
-            </p>
+            <%= @content %>
           </article>
         </div>
       </div>
-      <hr />
+      <div class="divider">
+            <p class="text-lg card-title"><code>DaisyUI</code> Components Demostration</p>
+          </div>
       <div class="card">
         <div class="card-body">
-          <span class="countdown">
-            <span style="--value:59;" aria-live="polite" aria-label="59">59</span>
-          </span>
+          <p class="text-center">TBD</p>
         </div>
       </div>
     </div>
